welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:6: error: not found: value in1020
		if(in1020(b))
                   ^max1020:8: error: reassignment to val
			a = Math.max(a,b);
                          ^max1020:14: error: reassignment to val
		a = b;
                  ^